Fixed htmls, removed func notify (it's only for mac)

--- a/carparts/templates/add_order.html
+++ b/carparts/templates/add_order.html
@@ -83,9 +83,9 @@
                         <label for="status" class="block text-sm font-medium text-gray-700 mb-1">Статус</label>
                         <select id="status" name="status"
                                 class="input-field w-full px-4 py-3 rounded-lg focus:outline-none">
-                            <option value="Pending" selected>Ожидает</option>
-                            <option value="Paid">Оплачен</option>
-                            <option value="Completed">Завершен</option>
+                            <option value="Ожидает" selected>Ожидает</option>
+                            <option value="Оплачен">Оплачен</option>
+                            <option value="Завершен">Завершен</option>
                         </select>
                     </div>
 
